test/integration/error/err_02_type_confusion.pl0
program typeConf;
procedure p(); begin end;
var x;
begin
  x := p + 1; { Error: p is proc }
end